# il2_test

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cockroach_simulator.sln
cockroach_simulator/: CMakeLists.txt  Cockroach.h  Food.h  Game.h  Resource.h  cockroach_simulator.aps  cockroach_simulator.cpp  cockroach_simulator.h  cockroach_simulator.rc  cockroach_simulator.vcxproj  cockroach_simulator.vcxproj.filters  static_global_vars.h
